--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
+/* line 1, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/utilities/_placeholders.scss */
+.img--small,
+.img--large {
+  border-radius: 50%;
+}
+
+/* line 5, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/utilities/_placeholders.scss */
+.grid__item, .search-bar input {
+  transition: box-shadow, transform;
+  transition-duration: 0.6s;
+  transition-timing-function: ease-in-out;
+}
+
+/* line 11, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/utilities/_placeholders.scss */
+.grid__item:hover, .search-bar input:hover, .search-bar input:focus {
+  box-shadow: 3px 3px 5px lightgrey;
+  transform: scale(1.05);
+}
+
+/* line 16, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/utilities/_placeholders.scss */
+.hidden {
+  display: none;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -374,6 +398,210 @@ template {
 /* line 1, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/base/_base.scss */
 * {
   box-sizing: border-box;
+}
+
+/* line 5, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/base/_base.scss */
+hr {
+  border: 1px solid lightgrey;
+  width: 100%;
+}
+
+/* line 1, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_layout.scss */
+.employee {
+  padding: 20px;
+  position: relative;
+}
+
+/* line 5, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_layout.scss */
+.employee__container {
+  max-width: 1400px;
+  margin: auto;
+}
+
+/* line 11, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_layout.scss */
+.grid {
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+
+/* line 16, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_layout.scss */
+.grid__item {
+  padding: 30px;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+/* line 29, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_layout.scss */
+.grid__item__flex {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+/* line 33, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_layout.scss */
+.grid__item__flex span {
+  margin-top: 10px;
+}
+
+/* line 6, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_images.scss */
+.img--small {
+  min-width: 100px;
+}
+
+/* line 1, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_typography.scss */
+body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 200;
+}
+
+/* line 6, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_typography.scss */
+h1,
+h2 {
+  margin: 0;
+  font-weight: 400;
+}
+
+/* line 12, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_typography.scss */
+h1 {
+  font-size: 1.25rem;
+  flex: 1;
+}
+
+/* line 17, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_typography.scss */
+h2 {
+  font-size: 1.125rem;
+}
+
+/* line 21, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_typography.scss */
+p {
+  font-size: 0.875rem;
+}
+
+/* line 1, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_modal.scss */
+.modal {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  top: 0;
+  left: -100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform, background-color;
+  transition-duration: 0.6s;
+  transition-timing-function: ease-out;
+}
+
+/* line 13, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_modal.scss */
+.modal:focus {
+  transform: translate(100%, 0);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* line 18, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_modal.scss */
+.modal__container {
+  position: relative;
+  background-color: white;
+  padding: 40px;
+  border-radius: 10px;
+  border: 1px solid lightgrey;
+}
+
+/* line 25, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_modal.scss */
+.modal__container__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* line 29, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_modal.scss */
+.modal__container__close {
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  right: 20px;
+}
+
+/* line 38, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_modal.scss */
+.modal h2,
+.modal p,
+.modal hr {
+  margin-top: 20px;
+}
+
+/* line 1, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+.search-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+}
+
+/* line 4, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+.search-bar input {
+  border-radius: 10px;
+  padding: 10px;
+  width: 100%;
+  border: 1px solid lightgrey;
+}
+
+/* line 10, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+.search-bar input:hover, .search-bar input:focus {
+  outline: none;
+}
+
+@media screen and (min-width: 680px) {
+  /* line 1, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+  .search-bar {
+    flex-direction: row;
+  }
+}
+
+/* line 21, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+.search {
+  position: relative;
+  margin-top: 20px;
+}
+
+@media screen and (min-width: 680px) {
+  /* line 21, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+  .search {
+    margin-top: 0;
+    margin-left: 20px;
+  }
+}
+
+/* line 28, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+.search__results {
+  position: absolute;
+  z-index: 100;
+  left: 0;
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid lightgrey;
+  background-color: white;
+}
+
+/* line 37, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+.search-result {
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.6s ease-in-out;
+}
+
+/* line 41, ../../../../../Users/devongillis/Projects/Websites/front-end-tech-08/scss/components/_search.scss */
+.search-result:hover {
+  background-color: lightgrey;
 }
 
 /*# sourceMappingURL=styles.css.map */
